CSS Fix
Fixed issue where contact form was off center

--- a/css/contact.css
+++ b/css/contact.css
@@ -6,6 +6,9 @@ main{
 .contact_info{
     width: 250px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .contact_info > h1{
